adds index.html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <h2>About Me</h2>
         <p>I'm a passionate web developer with experience in HTML, CSS, and JavaScript. I love creating beautiful, responsive websites that provide an excellent user experience.</p>
     </section>
-
-git         <h2>My Skills</h2>
+    <section id="skills" class="skills">
+        <h2>My Skills</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
